tests/fixtures/guardrails/invalid/webhook-const-inline-local-business-logic/app/routes/webhooks.app.uninstalled.ts
export const action = async () => {
  const payload = { topic: "app/uninstalled" };
  return payload.topic.toUpperCase();
};
